--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-smorest = "*"
+python-dotenv = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 
